# linkedin_zip_solver

./: .gitignore  README.md  examples.txt  main.py  pyproject.toml  setup.py
src/: LinkedinZip.py
