[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zip_solver"
version = "0.1.0"
description = "An automated solver for the LinkedIn Zip puzzle game using Selenium WebDriver."
readme = "README.md"
authors = [
  { name = "Matthias" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium",
    "beautifulsoup4",
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/MatthiasHofstede/linkedin_zip_solver"

[project.scripts]
zip-solver = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
